--- a/src/app/modules/developer/Components/booking-list/booking-list.component.html
+++ b/src/app/modules/developer/Components/booking-list/booking-list.component.html
@@ -46,7 +46,7 @@
     
                 <!-- Button -->
                 <div class="mt-2 mt-md-0">
-                  <a href="#" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
+                  <a [routerLink]="['/developer/profile/session-details', booking.Id ]" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
                 </div>
               </div>
     
