--- a/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.html
+++ b/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.html
@@ -161,7 +161,7 @@
                               <span class="text-dark" style="font-size: 20px;"> Meeting Link:<a href="{{sessiondetails?.MeetingLink}}">{{sessiondetails?.MeetingLink}}></a></span>
                            </span> -->
                   </div>
-                  <div class="col-md-6 mt-5">
+                  <!-- <div class="col-md-6 mt-5">
                      <button (click)="showReviewForm = !showReviewForm" class="btn btn-outline-primary"
                         style="padding-left: 40%; padding-right: 40%; ">
                         {{ showReviewForm ? 'Hide Review' : 'Add Review' }}
@@ -190,7 +190,42 @@
                               class="btn btn-outline-primary">Submit</button>
                         </form>
                      </div>
-                  </div>
+                  </div> -->
+
+
+
+
+
+
+
+
+
+                  <div class="col-md-6 mt-5">
+                     <button (click)="showReviewForm = !showReviewForm" class="btn btn-outline-primary" style="padding-left: 40%; padding-right: 40%;">
+                       {{ showReviewForm ? 'Hide Review' : 'Add Review' }}
+                     </button>
+                   
+                     <div *ngIf="showReviewForm">
+                       <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
+                         <div>
+                           <label for="rating">Rating:</label>
+                           <div>
+                             <span *ngFor="let star of [1, 2, 3, 4, 5]" (click)="reviewForm.patchValue({ rating: star })">
+                               <i class="star" [ngClass]="{ 'filled': star <= reviewForm.get('rating')?.value }">★</i>
+                             </span>
+                           </div>
+                         </div>
+                   
+                         <div>
+                           <label for="comment">Your Review:</label>
+                           <textarea class="form-control mb-3 p-4" id="comment" formControlName="comment" rows="4" cols="50"></textarea>
+                         </div>
+                   
+                         <button type="submit" [disabled]="reviewForm.invalid" class="btn btn-outline-primary">Submit</button>
+                       </form>
+                     </div>
+                   </div>
+                   
                </div>
 
             </div>
