--- a/src/app/modules/developer/Components/quiz/quiz.component.html
+++ b/src/app/modules/developer/Components/quiz/quiz.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="card-body">
-      <h6>Question {{ currentQuestionIndex + 1 }} / {{ questions.length }}</h6>
+      <h6>Question {{ currentQuestionIndex + 1 }} / {{ questions?.length }}</h6>
       <p>{{ questions[currentQuestionIndex].text }}</p>
       <div class="form-group">
         <div class="form-check" *ngFor="let option of questions[currentQuestionIndex].options; let i = index">
@@ -24,7 +24,7 @@
         <button class="btn button" (click)="previousQuestion()"
           [disabled]="currentQuestionIndex === 0">Previous</button>
         <button class="btn button  ms-3" (click)="nextQuestion()"
-          [disabled]="currentQuestionIndex === questions.length - 1">Next</button>
+          [disabled]="currentQuestionIndex === questions?.length - 1">Next</button>
         <button class="btn supmit-button   ms-3" (click)="submitQuiz()" [disabled]="!allQuestionsAnswered()">Submit
           Quiz</button>
 
