--- a/src/app/modules/developer/Components/booking-list/booking-list.component.html
+++ b/src/app/modules/developer/Components/booking-list/booking-list.component.html
@@ -25,7 +25,7 @@
        
           <div class="tab-pane fade active show" id="tab-1" role="tabpanel">
             @if (pendingBookings?.length > 0) {
-            <h6>Pending  Session ({{pendingBookings.length}})</h6>
+            <h6>Pending  Session ({{pendingBookings?.length}})</h6>
             <!-- Card item START -->
              @for (booking of pendingBookings; track $index) {
             <div class="card border mb-4">
@@ -84,7 +84,7 @@
         <!-- Tab content item START -->
         <div class="tab-pane fade" id="tab-2" role="tabpanel">
           @if (canceledBookings?.length > 0) {
-          <h6>Cancelled  Session ({{canceledBookings.length}})</h6>
+          <h6>Cancelled  Session ({{canceledBookings?.length}})</h6>
           @for (booking of canceledBookings; track $index) {
             <div class="card border mb-4">
               <!-- Card header -->
@@ -104,7 +104,7 @@
     
                 <!-- Button -->
                 <div class="mt-2 mt-md-0">
-                  <a href="#" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
+                  <a [routerLink]="['/developer/profile/session-details', booking.Id ]" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
                 </div>
               </div>
     
@@ -141,7 +141,7 @@
        
         <div class="tab-pane fade" id="tab-3" role="tabpanel">
           @if (completedBookings?.length > 0) {
-            <h6>Completed Session ({{completedBookings.length}})</h6>
+            <h6>Completed Session ({{completedBookings?.length}})</h6>
           @for (booking of completedBookings; track $index) {
             <div class="card border mb-4">
               <!-- Card header -->
@@ -161,7 +161,7 @@
     
                 <!-- Button -->
                 <div class="mt-2 mt-md-0">
-                  <a href="#" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
+                  <a [routerLink]="['/developer/profile/session-details', booking.Id ]" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
                 </div>
               </div>
     
