--- a/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.html
+++ b/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.html
@@ -27,8 +27,8 @@
                      @if(sessiondetails?.Status==2){
                      <span class="badge bg-light-warning text-dark-warning ms-2">Pending <span>To Be completed the
                            session you must add a feedback</span></span>
-                     }
-                     @if(sessiondetails?.Status==1){
+                     }@if(sessiondetails?.Status==1){
+
                      <span class="badge bg-light-sucess text-dark-warning ms-2">Completed</span>
                      }
                      @if(sessiondetails?.Status==3){
@@ -123,7 +123,7 @@
 
                <div class="row">
 
-                                                                  <!-- <div class="col-md-6 mb-4 mb-lg-0">
+                  <!-- <div class="col-md-6 mb-4 mb-lg-0">
                                                                      <form [formGroup]="MeetingLinkForm" (ngSubmit)="onSubmitMeetingLink()">
                                                                      <h5>Meeting Link</h5>
                                                                      <textarea class="form-control mb-3" formControlName="feedback" rows="3"
@@ -133,7 +133,7 @@
                                                                      </form>
                                                                   </div>
                                                 -->
-                                                                     <!-- <form>
+                  <!-- <form>
                                                                      <div class="col-md-6">
                                                                         <h5>Feedback</h5>
                                                                         <textarea class="form-control mb-3 " rows="3" placeholder="Write Feedback to Interviewee"></textarea>
@@ -198,34 +198,86 @@
 
 
 
+                  @if(sessiondetails?.Status==1 || sessiondetails?.Status==3){
 
-
-                  <div class="col-md-6 mt-5">
-                     <button (click)="showReviewForm = !showReviewForm" class="btn btn-outline-primary" style="padding-left: 40%; padding-right: 40%;">
-                       {{ showReviewForm ? 'Hide Review' : 'Add Review' }}
+                  <div class="col-md-6 " style="margin-top: 30px;">
+                     <button (click)="showReviewForm = !showReviewForm" class="btn btn-outline-primary"
+                        style="padding-left: 40%; padding-right: 40%;">
+                        {{ showReviewForm ? 'Hide Review' : 'Add Review' }}
                      </button>
-                   
+
                      <div *ngIf="showReviewForm">
-                       <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
-                         <div>
-                           <label for="rating">Rating:</label>
+                        <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
                            <div>
-                             <span *ngFor="let star of [1, 2, 3, 4, 5]" (click)="reviewForm.patchValue({ rating: star })">
-                               <i class="star" [ngClass]="{ 'filled': star <= reviewForm.get('rating')?.value }">★</i>
-                             </span>
+                              <label for="rating">Rating:</label>
+                              <div>
+                                 <span *ngFor="let star of [1, 2, 3, 4, 5]"
+                                    (click)="reviewForm.patchValue({ rating: star })">
+                                    <i class="star"
+                                       [ngClass]="{ 'filled': star <= reviewForm.get('rating')?.value }">★</i>
+                                 </span>
+                              </div>
                            </div>
-                         </div>
-                   
-                         <div>
-                           <label for="comment">Your Review:</label>
-                           <textarea class="form-control mb-3 p-4" id="comment" formControlName="comment" rows="4" cols="50"></textarea>
-                         </div>
-                   
-                         <button type="submit" [disabled]="reviewForm.invalid" class="btn btn-outline-primary">Submit</button>
-                       </form>
+
+                           <div>
+                              <label for="comment">Your Review:</label>
+                              <textarea class="form-control mb-3 p-4" id="comment" formControlName="comment" rows="4"
+                                 cols="50"></textarea>
+                           </div>
+
+                           <button type="submit" [disabled]="reviewForm.invalid"
+                              class="btn btn-outline-primary">Submit</button>
+                        </form>
                      </div>
-                   </div>
-                   
+                  </div>
+               }
+
+
+               @if(sessiondetails?.Status==2  ){
+
+
+
+
+
+
+                  <div class="col-md-6 " style="margin-top: 30px;">
+                     <button (click)="showReviewForm = !showReviewForm" class="btn btn-outline-dark"
+                        style="padding-left: 40%; padding-right: 40%; color: black; background-color: gray; border: none;" disabled>
+                        {{ showReviewForm ? 'Hide Review' : 'Add Review' }}
+                     </button>
+
+                     <div *ngIf="showReviewForm">
+                        <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
+                           <div>
+                              <label for="rating">Rating:</label>
+                              <div>
+                                 <span *ngFor="let star of [1, 2, 3, 4, 5]"
+                                    (click)="reviewForm.patchValue({ rating: star })">
+                                    <i class="star"
+                                       [ngClass]="{ 'filled': star <= reviewForm.get('rating')?.value }">★</i>
+                                 </span>
+                              </div>
+                           </div>
+
+                           <div>
+                              <label for="comment">Your Review:</label>
+                              <textarea class="form-control mb-3 p-4" id="comment" formControlName="comment" rows="4"
+                                 cols="50"></textarea>
+                           </div>
+
+                           <button type="submit" [disabled]="reviewForm.invalid"
+                              class="btn btn-outline-primary">Submit</button>
+                        </form>
+                     </div>
+                  </div>
+
+
+               }
+
+
+
+
+
                </div>
 
             </div>
