--- a/src/app/modules/developer/Components/mentor-reply/mentor-reply.component.html
+++ b/src/app/modules/developer/Components/mentor-reply/mentor-reply.component.html
@@ -45,7 +45,7 @@
 
 
             <div class="col-lg-2 col-md-12 col-12 d-lg-flex align-items-start justify-content-end">
-              @if(query.QueryAnswers.length > 0){
+              @if(query?.QueryAnswers?.length > 0){
                <!-- <button type="button" class="btn btn-dark" [routerLink]="['/profile/answer-query', query.Instructor_Id]">
                   <i class="fas fa-user"></i> Go To Answer
                 </button>
@@ -58,7 +58,7 @@
               Go To Answer
             </a>
                 }
-                @if(query.QueryAnswers.length === 0){
+                @if(query?.QueryAnswers?.length === 0){
 
                 <a class="btn btn-outline-primary btn-sm disabled" style="border-radius: 25px;">
                   Pending
