--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -49,7 +49,7 @@
           </div>
           <div class="ml-auto d-flex links col-3 ">
             <!-- <div class="social-media mt-0 pt-0 col-4 mb-5 mb-0 ps-5 ps-1" style="text-align: end;"> -->
-            @if(mentor.SocialAccounts.length>0){
+            @if(mentor?.SocialAccounts?.length>0){
 
 
             @for (user of mentor.SocialAccounts; track $index; let index = $index) {
