--- a/src/app/modules/hr/Components/booking-hr/booking-hr.component.html
+++ b/src/app/modules/hr/Components/booking-hr/booking-hr.component.html
@@ -25,7 +25,7 @@
      
         <div class="tab-pane fade active show" id="tab-1" role="tabpanel">
           @if (pendingBookings?.length > 0) {
-          <h6>Pending  Session ({{pendingBookings.length}})</h6>
+          <h6>Pending  Session ({{pendingBookings?.length}})</h6>
           <!-- Card item START -->
            @for (booking of pendingBookings; track $index) {
           <div class="card border mb-4">
@@ -84,7 +84,7 @@
       <!-- Tab content item START -->
       <div class="tab-pane fade" id="tab-2" role="tabpanel">
         @if (canceledBookings?.length > 0) {
-        <h6>Cancelled  Session ({{canceledBookings.length}})</h6>
+        <h6>Cancelled  Session ({{canceledBookings?.length}})</h6>
         @for (booking of canceledBookings; track $index) {
           <div class="card border mb-4">
             <!-- Card header -->
@@ -141,7 +141,7 @@
      
       <div class="tab-pane fade" id="tab-3" role="tabpanel">
         @if (completedBookings?.length > 0) {
-          <h6>Completed Session ({{completedBookings.length}})</h6>
+          <h6>Completed Session ({{completedBookings?.length}})</h6>
         @for (booking of completedBookings; track $index) {
           <div class="card border mb-4">
             <!-- Card header -->
