--- a/src/app/modules/hr/Components/sidebarlayout/sidebarlayout.component.html
+++ b/src/app/modules/hr/Components/sidebarlayout/sidebarlayout.component.html
@@ -13,9 +13,17 @@
       </li>
       <div class="logout-section mt-3">
         <button class="btn btn-danger d-flex justify-content-center align-items-center wide-button" (click)="logout()" style="width: 200px;">
-          <i [class]="logoutItem.icon" class="mr-2"></i> <!-- Logout Icon -->
+          <i [class]="logoutItem.icon" class="me-2"></i> <!-- Logout Icon -->
           <span>{{ logoutItem.label }}</span> <!-- Logout Text -->
         </button>
+      </div>
+        <div class="logout-section mt-3">
+        <button class="btn btn-danger d-flex justify-content-center align-items-center wide-button " (click)="backhome()" style="background-color: black; width: 200px; border: none;">
+          <i [class]="homeItem.icon" style="color: white; ;"></i> <!-- Bind logout icon -->
+          {{ homeItem.label }} <!-- Bind logout label -->
+        </button> <!-- Logout Icon -->
+           
+         
       </div>
     </ul>
   </nav>
