--- a/src/app/modules/mentor/Components/profile/profile.component.html
+++ b/src/app/modules/mentor/Components/profile/profile.component.html
@@ -148,7 +148,7 @@
                 </div>
               </div>
               <!--card-->
-              @if(mentorReviews.length>0){
+              @if(mentorReviews?.length>0){
               <div class="card">
                 <!--card body-->
                 <div class="card-body p-md-5">
