--- a/src/app/modules/mentor/Components/session-details/session-details.component.html
+++ b/src/app/modules/mentor/Components/session-details/session-details.component.html
@@ -113,7 +113,7 @@
             <div class="card-body p-6">
 
                <div class="row">
-
+                  @if(sessiondetails.Status==2){
                   <div class="col-md-6 mb-4 mb-lg-0">
                      <form [formGroup]="MeetingLinkForm" (ngSubmit)="onSubmitMeetingLink()">
                       <h5>Meeting Link</h5>
@@ -123,7 +123,18 @@
                         Link</button>
                      </form>
                   </div>
+               }
 
+               @if(sessiondetails.Status==1 || sessiondetails.Status==3){
+
+                  <div class="col-md-6 mb-4 mb-lg-0">
+                  <h5>Meeting Link</h5>
+                  <p class="form-control mb-3" formControlName="feedback" rows="3"
+                    placeholder="Enter Session Link">{{sessiondetails.MeetingLink}} </p>
+                  </div>
+
+               }
+               
                   <!-- <form>
                       <div class="col-md-6">
                          <h5>Feedback</h5>
@@ -131,7 +142,17 @@
                          <a href="#" class="btn btn-primary btn-click">Save Notes</a>
                       </div>
                      </form> -->
-
+                     @if(sessiondetails.Status==1){
+                  <div class="col-md-6 ">
+                   
+                        <h5>Feedback</h5>
+                        <p class="form-control mb-3" rows="3"> {{sessiondetails.Feedback}}</p>
+                       
+                       
+                 
+                  </div>
+               }
+               @if(sessiondetails.Status==2 ){
                   <div class="col-md-6 ">
                      <form [formGroup]="feedbackForm" (ngSubmit)="onSubmitFeedback()">
                         <h5>Feedback</h5>
@@ -146,7 +167,23 @@
                            Session</button>
                      </form>
                   </div>
+               }
 
+               @if(sessiondetails.Status==3 ){
+                  <div class="col-md-6 ">
+                     <form [formGroup]="feedbackForm" (ngSubmit)="onSubmitFeedbackForCancel()">
+                        <h5>Feedback</h5>
+                        <textarea class="form-control mb-3" rows="3" formControlName="feedback"
+                           placeholder="Write Feedback to Interviewee"></textarea>
+                        <div
+                           *ngIf="feedbackForm.controls['feedback'].invalid && feedbackForm.controls['feedback'].touched"
+                           class="text-danger">
+                           Feedback is required.
+                        </div>
+                        <button type="submit" class="btn btn-primary" [disabled]="feedbackForm.invalid">Add Review</button>
+                     </form>
+                  </div>
+               }
                </div>
 
             </div>
