--- a/src/app/modules/developer/Components/booking/booking.component.html
+++ b/src/app/modules/developer/Components/booking/booking.component.html
@@ -116,7 +116,7 @@
                            </div>
                          </div>
                          <div class="mt-2 button-sub">
-                           <button [disabled]="!confirmButtonEnabled" class="confirm-button">Continue</button>
+                           <button [disabled]="!confirmButtonEnabled" (click)="BookSession()" class="confirm-button">Continue</button>
                          </div>
                        </div>
                      
