--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -9,7 +9,7 @@
         <div class="card login-card shadow-sm">
           <div class="card-body">
             <img src="logo 3_processed.jpg" class="card-image">
-            <h3 class="text-center mb-4" style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">Log in</h3>
+            <h3 class="text-center mb-4 your-element-class" >Log in</h3>
             <form (ngSubmit)="login()" [formGroup]="form">
               <div class="form-group mb-3">
                 <label for="email">UserName or Email</label>
