--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -1,6 +1,6 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+<!-- <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet"> -->
 
 <div class="login-page">
   <div class="container">
@@ -8,9 +8,9 @@
       <div class="col-md-8 col-lg-6">
         <div class="card login-card shadow-sm">
           <div class="card-body">
-            <img src="logo 1.jpg" class="card-image">
-            <h3 class="text-center mb-4"
-              style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">Sign up
+            <img src="logo 3_processed.jpg" class="card-image">
+            <h3 class="text-center mb-4 your-element-class"
+             >Sign up
             </h3>
 
 
