--- a/src/app/shared/components/register/register.component.css
+++ b/src/app/shared/components/register/register.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+
 .signup-form {
   max-width: 600px;
   margin: 50px auto;
@@ -143,4 +145,12 @@ button:focus{
   width: 200px !important;
   margin-left: 153px !important;
  
+}
+.your-element-class {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 36px;
+  color: rgb(31, 31, 31);
+  font-style: normal;
 }
