--- a/src/app/modules/developer/Components/booking/booking.component.css
+++ b/src/app/modules/developer/Components/booking/booking.component.css
@@ -62,7 +62,7 @@
   color: red;
   font-weight: bold;
   margin-top: 10px;
-  height: 232px;
+  /* height: 290vh; */
 }
 
 .calendar {
@@ -174,7 +174,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 729px;
+  height: auto;
+  width: 400px;
 }
 
 .header {
@@ -187,7 +188,7 @@
 .days-of-week {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  gap: 21px;
+  gap: 30px;
   font-weight: 400;
   color: #898989;
   font-size: 13px;
@@ -197,11 +198,13 @@
 .days {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  /* gap: 2px; */
+
 }
 
 .day {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -272,7 +275,7 @@
   gap: 5px;
   
   /* border-bottom:  1px solid #ccc; */
-  padding-bottom: 15px;
+  /* padding-bottom: 15px; */
 }
 
 .time-button {
@@ -282,7 +285,7 @@
   border-radius: 10px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  font-size: 13px;
+  font-size: 15px;
 
   padding-left: 5px;
   padding-right: 5px;
@@ -308,7 +311,7 @@
 
 .no-availability {
   color: red;
-  font-weight: bold;
+  /* font-weight: bold; */
   margin-top: 10px;
 }
 
@@ -322,7 +325,7 @@
   padding-right: 10px;
   padding: 10px;
   margin-top: 20px;
-  font-weight: 450;
+  font-weight: 400;
 
 }
 
@@ -436,7 +439,72 @@
   flex-wrap: wrap;
   flex-direction: row;
 }
-
+.Title{
+  text-align: left;
+  width: 100%;
+  margin-top: 20px;
+}
+.custom-length{
+  /* height: 246px !important; */
+  margin-top: 20px;
+  gap: 5px;
+  /* padding-bottom: 150px; */
+}
+.time-button.active {
+  border: 1px solid #67abf0;
+  background-color: #deedfc;
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+}
+/* .time-button {
+  border: 1px solid #ccc;
+  background-color: #ffffff;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 15px;
+  padding: 10px;
+  margin: 5px;
+} */
+/* 
+.time-button.active {
+  border: 1px solid #67abf0;
+  background-color: #deedfc;
+} */
+.confirm-button1 {
+  padding: 10px 20px;
+  background-color: #0073eb;
+  color: #f9fcfe;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  height:50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  /* width: 100%; */
+  
+}
+.confirm-button1:hover {
+  background-color: #183f6e;
+  
+}
+.confirm-button2 {
+  padding: 10px 20px;
+  background-color: #e21313;
+ color : #f9fcfe;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  height:50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  /* width: 100%; */
+  
+}
+.confirm-button2:hover {
+  background-color: #183f6e;
+  
+}
 
 
 
