--- a/src/app/modules/developer/Components/booking/booking.component.html
+++ b/src/app/modules/developer/Components/booking/booking.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4 ">
     <div class="ml-auto d-flex mb-2">
         <a href="#" class="btn btn-light mr-2"> <i class="fa-solid fa-arrow-left-long"></i></a>
-        <h3 class="ms-2">{{mentorProfile.FirstName}} {{mentorProfile.LastName}}</h3>
+        <h3 class="ms-2">{{mentorProfile?.FirstName}} {{mentorProfile?.LastName}}</h3>
     </div>
     <div class="row">
         <div class="col-xl-7 col-12">
@@ -31,10 +31,10 @@
 
                 <!-- Footer with Profile -->
                 <div class="d-flex align-items-center mt-3 p-3">
-                    <img src="http://localhost:5164/{{mentorProfile.Image}}" alt="Harshad Sawant" class="rounded-circle mr-3" width="60">
+                    <img src="http://localhost:5164/{{mentorProfile?.Image}}" alt="Harshad Sawant" class="rounded-circle mr-3" width="60">
                     <div class="p-3">
-                        <h6>{{mentorProfile.FirstName}} {{mentorProfile.LastName}}</h6>
-                        <p class="text-muted">{{mentorProfile.About}}</p>
+                        <h6>{{mentorProfile?.FirstName}} {{mentorProfile?.LastName}}</h6>
+                        <p class="text-muted">{{mentorProfile?.About}}</p>
                     </div>
                     @if(mentorProfile?.SocialAccounts?.length>0){
                     <div class="ml-auto d-flex">
@@ -102,7 +102,7 @@
                              [ngClass]="{'active': selectedTime === time.StartTime}"
                              (click)="onTimeSelect(time.StartTime, time.EndTime)"
                            >
-                             {{ formatTimeToAmPm(time.StartTime) }} - {{ formatTimeToAmPm(time.EndTime) }}
+                             {{ formatTimeToAmPm(time.StartTime) }} - {{ formatTimeToAmPm(time?.EndTime) }}
                            </button>
                          </div>
                        
@@ -116,7 +116,7 @@
                            </div>
                          </div>
                          <div class="mt-2 button-sub">
-                           <button [disabled]="!confirmButtonEnabled" (click)="BookSession()" class="confirm-button">Continue</button>
+                           <button [disabled]="!confirmButtonEnabled" (click)="BookSession()" [routerLink]="['/paypal', sesssionid]" class="confirm-button">Continue</button>
                          </div>
                        </div>
                      
